[build-system]
requires = ["setuptools>=68.1"]
build-backend = "setuptools.build_meta"


[tool.poetry]
name = "hw-14-team-dev"
version = "0.1.0"
description = "A Tinkoff Python AB hw-10 package"
authors = ["Danila <danilaprig@gmail.com>", "Vitali <realvitl@yandex.ru>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.1"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.9"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^6.1.0"
pylint = "^3.0.3"
mypy = "^1.8.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
sqlalchemy-utils = "^0.41.1"

[tool.black]
line-length = 79
skip-string-normalization = true
extend-exclude = "protos"

[tool.flake8]
ban-todos = true