[build-system]
requires = ["setuptools>=68.1"]
build-backend = "setuptools.build_meta"


[tool.poetry]
name = "hw-14-team-dev"
version = "0.1.0"
description = "A Tinkoff Python AB hw-10 package"
authors = ["Danila <danilaprig@gmail.com>", "Vitali <realvitl@yandex.ru>", "Maksim <maks-laptev.03@mail.ru>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.1"
python-dotenv = "^1.0.0"
pydantic = "^2.5.3"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.1.0"
psycopg = "^3.1.16"
psycopg-binary = "^3.1.16"
passlib = "^1.7.4"
jwt = "^1.3.1"
pyjwt = "^2.8.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
bcrypt = "^4.1.2"
ruff = "^0.1.9"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^6.1.0"
pylint = "^3.0.3"
mypy = "^1.8.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
sqlalchemy-utils = "^0.41.1"

[tool.black]
line-length = 79
skip-string-normalization = true
extend-exclude = "protos"

[tool.flake8]
ban-todos = true

[tool.ruff]
exclude = [
    ".direnv",
    ".mypy_cache",
    ".pyenv",
    ".pytest_cache",
    ".ruff_cache",
    "venv",
]

line-length = 79
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"

indent-style = "space"

skip-magic-trailing-comma = false

line-ending = "auto"

docstring-code-format = false

docstring-code-line-length = "dynamic"